dom/ipc/TabParent.cpp
@@ -1794,6 +1794,13 @@ TabParent::RecvEnableDisableCommands(const nsString& aAction,
   return true;
 }
 
+bool
+TabParent::RecvGetTabOffset(LayoutDeviceIntPoint* aPoint)
+{
+  *aPoint = GetChildProcessOffset();
+  return true;
+}
+
 NS_IMETHODIMP
 TabParent::GetChildProcessOffset(int32_t* aOutCssX, int32_t* aOutCssY)
 {
